src/test/ui/issues/60000-69999/issue-60989.stderr
error[E0109]: type arguments are not allowed for this type
  --> $DIR/issue-60989.rs:12:10
   |
LL |     c1::<()>;
   |          ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/issue-60989.rs:16:10
   |
LL |     c1::<dyn Into<B>>;
   |          ^^^^^^^^^^^ type argument not allowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0109`.
